--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="jquery-1.4.2.min.js"></script>
     <script type="text/javascript" src="jquery.history.js"></script>
     <script type="text/javascript" src="kerryb.js"></script>
+    <script type="text/javascript" src="analytics.js"></script>
     <script type="text/javascript" src="slippy-0.9.0.js"></script>
     <!-- Slippy structural styles -->
     <link type="text/css" rel="stylesheet" href="slippy-0.9.0.css"/>
