Correct tag names

--- a/index.html
+++ b/index.html
@@ -408,11 +408,11 @@
         <hr />
         <p>Run only specs tagged &lsquo;current&rsquo;</p>
         <pre>
-          rspec --tag focus ...
+          rspec --tag current ...
         </pre>
         <p>Run specs <em>not</em> tagged &lsquo;current&rsquo;</p>
         <pre>
-          rspec --tag ~focus ...
+          rspec --tag ~current ...
         </pre>
       </div>
     </div>
